--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,8 +6,36 @@ on:
       - main
 
 jobs:
-  deploy-hml:
+  build:
     runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Generate General Tag(Run Date and Github Run Number)
+        run: echo "GENERAL_TAG=$(date + '%Y%m%d_'$GITHUB_RUN_NUMBER)" >> $GITHUB_ENV
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1  
+
+      - name: Login to Amazon ECR
+        id: login-ecr
+        uses: aws-actions/amazon-ecr-login@v1
+
+      - name: Build, tag, and push image to Amazon ECR
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: amarassist
+        run: |
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:{{ env.GENERAL_TAG }} .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:{{ env.GENERAL_TAG }}
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: ["build"]
     steps:
       - uses: actions/checkout@v3
 
@@ -20,4 +48,4 @@ jobs:
           script: |
             ls -lha 
             pwd
-            mkdir teste
+
