--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,8 @@ jobs:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: amarassist
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ env.GENERAL_TAG }} .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ env.GENERAL_TAG }}
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:latest .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:latest
 
   deploy:
     runs-on: ubuntu-latest
